Added image and corrected text

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ITMD-361 Internet Technologies and Web Design</title>
+  <title>ITMD-362 Human-Computer Interaction and Web Design</title>
 </head>
 <body>
 	<header>
-	  <h1>Project 2 - Immanuel Downs - Directory</h1>
+	  <h1>Lab1 - Immanuel Downs - Directory</h1>
 	  <nav>
 		<ul>
 		  <li>A random thing 1</li>
